--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "dev:watch": "tsx watch src/index.ts",
+    "dev:mm": "tsx watch src/matchmaking.ts",
     "build": "node esbuild.mjs"
   },
   "author": "07prajwal2000",
@@ -20,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
+    "nats": "^2.27.0",
     "socket.io": "^4.7.5",
     "zod": "^3.23.8"
   }
